--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -11,8 +11,7 @@
   <!-- endbuild -->
 </head>
 
-  <body class="container">
-    <h3> ngSuper Generator </h3>
+  <body>
     <div ui-view></div>
   </body>
 
@@ -30,12 +29,16 @@
   <!-- endbower -->
   <script src="src/core/core.module.js"></script>
   <script src="src/common/common.module.js"></script>
+  <script src="src/shell/shell.module.js"></script>
   <script src="src/app.module.js"></script>
   <script src="src/core/restangular.config.js"></script>
   <script src="src/core/router.config.js"></script>
   <script src="src/core/httpStatus.constant.js"></script>
   <script src="src/welcome/welcome.module.js"></script>
   <script src="src/welcome/welcome.controller.js"></script>
-  <!-- endbuild -->
+  <script src="src/shell/shell.controller.js"></script>
+  <script src="src/shell/subnav.controller.js"></script>
+  <script src="src/shell/topnav.controller.js"></script>
+<!-- endbuild -->
 
 </html>
