--- a/web-app/app/src/welcome/welcome.html
+++ b/web-app/app/src/welcome/welcome.html
@@ -1,3 +1,7 @@
 <div class="welcome">
-  <span class="message" ng-bind="vm.welcomeMessage"></span>
+  <div class="jumbotron">
+    <h1>Welcome!</h1>
+    <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+  </div>
 </div>
