working on chat UI

--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -30,6 +30,7 @@
   <script src="src/core/core.module.js"></script>
   <script src="src/common/common.module.js"></script>
   <script src="src/shell/shell.module.js"></script>
+  <script src="src/chat/chat.module.js"></script>
   <script src="src/app.module.js"></script>
   <script src="src/core/restangular.config.js"></script>
   <script src="src/core/router.config.js"></script>
@@ -39,6 +40,7 @@
   <script src="src/shell/shell.controller.js"></script>
   <script src="src/shell/subnav.controller.js"></script>
   <script src="src/shell/topnav.controller.js"></script>
+  <script src="src/chat/chat.controller.js"></script>
 <!-- endbuild -->
 
 </html>
