--- a/web-app/app/src/chat/chat.html
+++ b/web-app/app/src/chat/chat.html
@@ -1,15 +1,56 @@
 <div class="row">
-<div class="col-md-9 jumbotron main-col">
-  <div>
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BG9mplKbVwg" frameborder="0" allowfullscreen></iframe>
+  <div class="col-md-6 main-col">
+    <div class="single-video-box-outer">
+
+      <img src="images/chat/pic1.jpg" class="single-video-box-inner" >
+
+    </div>
+    <div class="single-video-box-outer">
+
+      <img src="images/chat/pic2.jpg" class="single-video-box-inner">
+
     </div>
   </div>
-  <div>
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe height="400px" class="embed-responsive-item" src="https://www.youtube.com/embed/BG9mplKbVwg" frameborder="0" allowfullscreen></iframe>
+  <div class="col-md-5 sub-col">
+    <div class="row">
+      <div class="col-md-6">
+        <span class="chat-box-heading">Let Chats !!</span>
+      </div>
+      <div class="col-md-4 col-md-offset-2 chat-box-btn-box" >
+        <button  class="btn btn-primary">Start</button>
+        <button  class="btn btn-success">Next > ></button>
+      </div>
+    </div>
+
+    <div class="chat-box-main">
+      <span class="chat-box-subLine">You're now chatting with a random stranger. Say hi!</span>
+    </div>
+    <div class="chat-message">
+      <div>
+        <span class="chat-message-user1-name">You:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+      </div>
+    </div>
+    <div class="chat-message">
+      <div>
+        <span class="chat-message-user2-name">Stranger:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+      </div>
+    </div>
+    <div class="chat-message">
+      <div>
+        <span class="chat-message-user1-name">You:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+      </div>
+    </div>
+
+    <div class="chat-message-create-box">
+      <div class="row">
+        <div class="col-md-10">
+          <input type="text" class="chat-message-create-textarea">
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-default chat-message-create-sendbtn">Send</button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-<div class="col-md-3 jumbotron sub-col">left</div>
+
 </div>
