UI of single chat completed

--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -11,8 +11,8 @@
   <!-- endbuild -->
 </head>
 
-  <body>
-    <div ui-view></div>
+  <body class="body-backGround">
+    <div  ui-view></div>
   </body>
 
   <!-- build:js scripts/app.js -->
