--- a/web-app/app/src/chat/chat.html
+++ b/web-app/app/src/chat/chat.html
@@ -18,36 +18,37 @@
       </div>
       <div class="col-md-4 col-md-offset-2 chat-box-btn-box" >
         <button  class="btn btn-primary">Start</button>
-        <button  class="btn btn-success">Next > ></button>
+        <button  class="btn btn-success">Next <span class="glyphicon glyphicon-search"></span></button>
       </div>
     </div>
 
     <div class="chat-box-main">
       <span class="chat-box-subLine">You're now chatting with a random stranger. Say hi!</span>
     </div>
-    <div class="chat-message">
-      <div>
-        <span class="chat-message-user1-name">You:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+    <div class="chat-box-subMain">
+      <div class="chat-message">
+        <div>
+          <span class="chat-message-user1-name">You:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+        </div>
+      </div>
+      <div class="chat-message">
+        <div>
+          <span class="chat-message-user2-name">Stranger:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+        </div>
+      </div>
+      <div class="chat-message">
+        <div>
+          <span class="chat-message-user1-name">You:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
+        </div>
       </div>
     </div>
-    <div class="chat-message">
-      <div>
-        <span class="chat-message-user2-name">Stranger:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
-      </div>
-    </div>
-    <div class="chat-message">
-      <div>
-        <span class="chat-message-user1-name">You:</span>&nbsp<span class="chat-message-text">Hi Boy!</span>
-      </div>
-    </div>
-
     <div class="chat-message-create-box">
       <div class="row">
         <div class="col-md-10">
           <input type="text" class="chat-message-create-textarea">
         </div>
         <div class="col-md-2">
-          <button class="btn btn-default chat-message-create-sendbtn">Send</button>
+          <button class="btn btn-default chat-message-create-sendbtn ">Send</button>
         </div>
       </div>
     </div>
