--- a/web-app/app/src/shell/shell.html
+++ b/web-app/app/src/shell/shell.html
@@ -2,12 +2,13 @@
   <!--<div ui-view="topNavBar"></div>-->
   <!--</header>-->
   <!--<div ui-view="subNavBar"></div>-->
-<div class="body-backGround"  >
   <header id="mainHeader">
     <div ui-view="topNavBar"></div>
     <!--<div ui-view="subNavBar"></div>-->
   </header>
 
   <div ui-view="content" ></div>
+<footer>
+  <div ui-view="footer"></div>
+</footer>
 
-</div>
