adding socket on both server and client

--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -14,7 +14,7 @@
   <body class="body-backGround">
     <div  ui-view></div>
   </body>
-
+<script src="http://localhost:3000/socket.io/socket.io.js"></script>
   <!-- build:js scripts/app.js -->
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -26,6 +26,7 @@
   <script src="bower_components/restangular/dist/restangular.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/angular-socket-io/socket.js"></script>
   <!-- endbower -->
   <script src="src/core/core.module.js"></script>
   <script src="src/common/common.module.js"></script>
