--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title ng-bind="pageTitle"></title>
+  <script src="http://cdn.temasys.com.sg/adapterjs/0.13.x/adapter.min.js"></script>
   <!-- build:css styles/main.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -42,6 +43,9 @@
   <script src="src/shell/subnav.controller.js"></script>
   <script src="src/shell/topnav.controller.js"></script>
   <script src="src/chat/chat.controller.js"></script>
+  <script src="src/chat/chat2.controller.js"></script>
+  <script src="src/chat/chat3.controller.js"></script>
+  <script src="src/common/socket.factory.js"></script>
 <!-- endbuild -->
 
 </html>
