--- a/web-app/app/src/chat/chat.html
+++ b/web-app/app/src/chat/chat.html
@@ -14,8 +14,12 @@
     </div>
   </div>
   <div class="col-md-5 sub-col">
-    <input id="videoCallButton" type="button" disabled value="Video Call"/>
-    <input id="endCallButton" type="button" disabled value="End Call"/>
+    <div>
+      <h3>BroadCast Example</h3>
+      <button ng-click="vm.addMeToSocket()"> Add me Ad Online</button>
+      {{vm.listOfOnlineUser}}
+      <button></button>
+    </div>
     <div class="row">
       <div class="col-md-6">
         <span class="chat-box-heading">Let Chats !!</span>
