--- a/web-app/app/src/chat/chat3.html
+++ b/web-app/app/src/chat/chat3.html
@@ -17,4 +17,9 @@
     <video id="remoteVideo" autoplay></video>
   </div>
 
+
+  <h2>Video test</h2>
+  <input type="text" ng-model="vm.testVideo">
+  <button ng-click="vm.addVideo()">add video</button>
+  <video id="testVideo" autoplay></video>
 </div>
