--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title ng-bind="pageTitle"></title>
-  <script src="http://cdn.temasys.com.sg/adapterjs/0.13.x/adapter.min.js"></script>
+  <!--<script src="http://cdn.temasys.com.sg/adapterjs/0.13.x/adapter.min.js"></script>-->
   <!-- build:css styles/main.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -28,6 +28,7 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="bower_components/angular-socket-io/socket.js"></script>
+  <script src="bower_components/webrtc-adapter/release/adapter.js"></script>
   <!-- endbower -->
   <script src="src/core/core.module.js"></script>
   <script src="src/common/common.module.js"></script>
@@ -45,6 +46,7 @@
   <script src="src/chat/chat.controller.js"></script>
   <script src="src/chat/chat2.controller.js"></script>
   <script src="src/chat/chat3.controller.js"></script>
+  <script src="src/chat/chat4.controller.js"></script>
   <script src="src/common/socket.factory.js"></script>
 <!-- endbuild -->
 
