--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -15,7 +15,8 @@
   <body class="body-backGround">
     <div  ui-view></div>
   </body>
-<script src="http://localhost:3000/socket.io/socket.io.js"></script>
+<!--<script src="http://localhost:3000/socket.io/socket.io.js"></script>-->
+<script src="https://random-video-chat.herokuapp.com/socket.io/socket.io.js"></script>
   <!-- build:js scripts/app.js -->
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
